--- a/Spring05_Final/src/main/webapp/css3/Step05_AnimateCss.html
+++ b/Spring05_Final/src/main/webapp/css3/Step05_AnimateCss.html
@@ -2,41 +2,45 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>css3/Step05_AnimateCss.html</title>
+<title>/css/Step05_AnimateCss.html</title>
 <!-- animate css 로딩하기 -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
+<link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
 <style>
 	.container{
-		width:768px;
-		margin:300px auto 0;
+		width: 768px;
+		margin: 300px auto 0;
 	}
 	h1{
-		text-align:center;
+		text-align: center;
 	}
 	#one{
 		animation-duration: 3s;
-		animation-iteration-count:infinite;
+		animation-iteration-count: infinite;
 	}
 </style>
 </head>
 <body>
 <div class="container">
-	<h1 class="animate__animated animate__swing">Animate Me!</h1>
-	<h1 id="one" class="animate__animated animate__swing">Animate Me!2</h1>
-	<button id="myBtn" class="animate__animated">Hover</button>
-	<button id="yBtn" class="animate__animated">Hover2</button>
+	<h1 class="animate__animated animate__zoomIn">Animate Me!</h1>
+	<h1 id="one" class="animate__animated animate__zoomIn">Animate Me!</h1>
+	<button id="myBtn" class="animate__animated">마우스를 올려보셈</button>
+	<button id="yourBtn" class="animate__animated">마우스를 올려보셈</button>
 </div>
 <script src="../resources/js/jquery-3.5.1.js"></script>
 <script>
 	$("#myBtn").on("mouseover", function(){
+		//한번만 동작한다. 
 		$(this).addClass("animate__swing");
 	});
-	$("#yBtn").on("mouseover", function(){
-		$(this).addClass("animate__swing").one("animationend", function(){
+	$("#yourBtn").on("mouseover", function(){
+		//여러번 동작한다.
+		$(this)
+		.addClass("animate__swing")
+		.one("animationend", function(){
 			$(this).removeClass("animate__swing");
 		});
 	});
-	
 </script>
 </body>
 </html>
